log

Thu Mar 10 19:03:46 HSP 2022: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
f7bae27
Fri Mar 11 18:13:38 HSP 2022: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:21:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ec60636
Fri Mar 11 18:14:03 HSP 2022: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:21:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d97be3c
Fri Mar 11 18:21:15 HSP 2022: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:15:12: error: format '%d' expects argument of type 'int *', but argument 2 has type 'int' [-Werror=format=]
    scanf("%d%d", a, b);
            ^
exercises.c:15:14: error: format '%d' expects argument of type 'int *', but argument 3 has type 'int' [-Werror=format=]
    scanf("%d%d", a, b);
              ^
cc1.exe: all warnings being treated as errors
Compilation failed
d3e5fa8
Fri Mar 11 18:27:18 HSP 2022: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
5842b05
Fri Mar 11 18:54:53 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
2b67e8f
Fri Mar 11 18:55:18 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|0
8dccddc
Fri Mar 11 19:10:28 HSP 2022: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|6
36ea192
Fri Mar 11 19:11:00 HSP 2022: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:64:10: error: too many arguments for format [-Werror=format-extra-args]
    scanf("[^\n]s", personaLocal.nombre);
          ^~~~~~~~
exercises.c:65:10: error: too many arguments for format [-Werror=format-extra-args]
    scanf("[^\n]s", personaLocal.rut);
          ^~~~~~~~
exercises.c:67:11: error: function returns address of local variable [-Werror=return-local-addr]
    return &personaLocal;
           ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7289061
Fri Mar 11 19:11:20 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:67:11: error: function returns address of local variable [-Werror=return-local-addr]
    return &personaLocal;
           ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b8455da
Fri Mar 11 19:11:29 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:67:11: error: incompatible types when returning type 'Persona {aka struct <anonymous>}' but 'Persona * {aka struct <anonymous> *}' was expected
    return personaLocal;
           ^~~~~~~~~~~~
exercises.c:68:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
2ff9613
Fri Mar 11 19:12:11 HSP 2022: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:64:14: error: format '%[^
   ' expects argument of type 'char *', but argument 2 has type 'char (*)[30]' [-Werror=format=]
    scanf("%[^\n]s", &personaLocal.nombre);
              ^
exercises.c:65:14: error: format '%[^
   ' expects argument of type 'char *', but argument 2 has type 'char (*)[11]' [-Werror=format=]
    scanf("%[^\n]s", &personaLocal.rut);
              ^
exercises.c:67:11: error: function returns address of local variable [-Werror=return-local-addr]
    return &personaLocal;
           ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3d51dad
Fri Mar 11 19:12:58 HSP 2022: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:64:16: error: format '%[^
   ' expects argument of type 'char *', but argument 2 has type 'char (*)[30]' [-Werror=format=]
    scanf("%31[^\n]s", &personaLocal.nombre);
                ^
exercises.c:66:16: error: format '%[^
   ' expects argument of type 'char *', but argument 2 has type 'char (*)[11]' [-Werror=format=]
    scanf("%12[^\n]s", &personaLocal.rut);
                ^
exercises.c:69:11: error: function returns address of local variable [-Werror=return-local-addr]
    return &personaLocal;
           ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
690ea59
Fri Mar 11 19:13:41 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:64:12: error: format '%s' expects argument of type 'char *', but argument 2 has type 'char (*)[30]' [-Werror=format=]
    scanf("%s", &personaLocal.nombre);
            ^
exercises.c:66:12: error: format '%s' expects argument of type 'char *', but argument 2 has type 'char (*)[11]' [-Werror=format=]
    scanf("%s", &personaLocal.rut);
            ^
exercises.c:69:11: error: function returns address of local variable [-Werror=return-local-addr]
    return &personaLocal;
           ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a7b8275
Fri Mar 11 19:14:43 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:64:14: error: format '%s' expects argument of type 'char *', but argument 2 has type 'char (*)[30]' [-Werror=format=]
    scanf("%31s", &personaLocal.nombre);
              ^
exercises.c:66:12: error: format '%s' expects argument of type 'char *', but argument 2 has type 'char (*)[11]' [-Werror=format=]
    scanf("%s", &personaLocal.rut);
            ^
exercises.c:69:11: error: function returns address of local variable [-Werror=return-local-addr]
    return &personaLocal;
           ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8251f6b
